<resources>
    <string name="app_name">Hourly Worker </string>
    <string name="action_settings">Settings</string>
    <string name="action_introduction">Introduction</string>
    <string name="startTime"></string>
    <string name="endTime"></string>
    <string name="button_send">Add An Record</string>
    <string name="button_inquiry">Inquiry</string>
    <string name="button_delete">Delete</string>
    <string name="button_update">Update</string>
    <string name="button_submit">Submit</string>


    <string name="title_activity_display_message">My Message</string>



</resources>
